.labs/AWS/eks/manifests/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
